crates/pg_syntax/tests/snapshots/postgres_regress/json@227.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ia FROM json_populate_record(NULL::jsrec, '{\"ia\": 123}') q;"
---
SelectStmt@0..66
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..9
    ColumnRef@7..9
      Ident@7..9 "ia"
  Whitespace@9..10 " "
  From@10..14 "FROM"
  Whitespace@14..15 " "
  RangeFunction@15..65
    List@15..62
      FuncCall@15..62
        Ident@15..35 "json_populate_record"
        Ascii40@35..36 "("
        TypeCast@36..47
          AConst@36..40
            NullP@36..40 "NULL"
          Typecast@40..42 "::"
          TypeName@42..47
            Ident@42..47 "jsrec"
        Ascii44@47..48 ","
        Whitespace@48..49 " "
        AConst@49..62
          Sconst@49..62 "'{\"ia\": 123}'"
    Ascii41@62..63 ")"
    Whitespace@63..64 " "
    Alias@64..65
      Ident@64..65 "q"
  Ascii59@65..66 ";"

