crates/pg_syntax/tests/snapshots/postgres_regress/json@231.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ia FROM json_populate_record(NULL::jsrec, '{\"ia\": [[1], [2, 3]]}') q;"
---
SelectStmt@0..76
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..9
    ColumnRef@7..9
      Ident@7..9 "ia"
  Whitespace@9..10 " "
  From@10..14 "FROM"
  Whitespace@14..15 " "
  RangeFunction@15..75
    List@15..72
      FuncCall@15..72
        Ident@15..35 "json_populate_record"
        Ascii40@35..36 "("
        TypeCast@36..47
          AConst@36..40
            NullP@36..40 "NULL"
          Typecast@40..42 "::"
          TypeName@42..47
            Ident@42..47 "jsrec"
        Ascii44@47..48 ","
        Whitespace@48..49 " "
        AConst@49..72
          Sconst@49..72 "'{\"ia\": [[1], [2, 3]]}'"
    Ascii41@72..73 ")"
    Whitespace@73..74 " "
    Alias@74..75
      Ident@74..75 "q"
  Ascii59@75..76 ";"

