crates/pg_syntax/tests/snapshots/postgres_regress/json@232.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ia FROM json_populate_record(NULL::jsrec, '{\"ia\": \"{1,2,3}\"}') q;"
---
SelectStmt@0..72
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..9
    ColumnRef@7..9
      Ident@7..9 "ia"
  Whitespace@9..10 " "
  From@10..14 "FROM"
  Whitespace@14..15 " "
  RangeFunction@15..71
    List@15..68
      FuncCall@15..68
        Ident@15..35 "json_populate_record"
        Ascii40@35..36 "("
        TypeCast@36..47
          AConst@36..40
            NullP@36..40 "NULL"
          Typecast@40..42 "::"
          TypeName@42..47
            Ident@42..47 "jsrec"
        Ascii44@47..48 ","
        Whitespace@48..49 " "
        AConst@49..68
          Sconst@49..68 "'{\"ia\": \"{1,2,3}\"}'"
    Ascii41@68..69 ")"
    Whitespace@69..70 " "
    Alias@70..71
      Ident@70..71 "q"
  Ascii59@71..72 ";"

