crates/pg_syntax/tests/snapshots/postgres_regress/json@237.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ia1d FROM json_populate_record(NULL::jsrec, '{\"ia1d\": null}') q;"
---
SelectStmt@0..71
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..11 "ia1d"
  Whitespace@11..12 " "
  From@12..16 "FROM"
  Whitespace@16..17 " "
  RangeFunction@17..70
    List@17..67
      FuncCall@17..67
        Ident@17..37 "json_populate_record"
        Ascii40@37..38 "("
        TypeCast@38..49
          AConst@38..42
            NullP@38..42 "NULL"
          Typecast@42..44 "::"
          TypeName@44..49
            Ident@44..49 "jsrec"
        Ascii44@49..50 ","
        Whitespace@50..51 " "
        AConst@51..67
          Sconst@51..67 "'{\"ia1d\": null}'"
    Ascii41@67..68 ")"
    Whitespace@68..69 " "
    Alias@69..70
      Ident@69..70 "q"
  Ascii59@70..71 ";"

